# git-lfs-hooks

./: .pre-commit-hooks.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  update-from-git-lfs.sh  update_from_git_lfs.sh
.github/workflows/: check-hooks-pr.yml  tag-version.yml
.github/workflows/scripts/: check-version.sh  update-from-git-lfs.sh
git_lfs_hooks/: cli.py  hook_wrappers.py  utils.py
git_lfs_hooks/hook-wrappers/: post-commit-wrapper  pre-push-wrapper
hook-wrappers/: post-checkout-wrapper  post-merge-wrapper  pre-push-wrapper
hooks/: post-checkout  post-commit  post-merge  pre-push
scripts/: update-changelog.sh  update-from-git-lfs.sh
tests/: check_hook_types_test.py
